<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.sentrysoftware</groupId>
		<artifactId>matrix</artifactId>
		<version>0.5-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<groupId>com.sentrysoftware.hardware.prometheus</groupId>
	<artifactId>hardware-sentry-prometheus</artifactId>
	<name>Hardware Sentry Exporter for Prometheus</name>
	<description>Hardware Sentry Exporter for Prometheus</description>
	<properties>
		<java.version>11</java.version>

		<!-- Sentry Skin Version (to be used in site.xml and therefore be consistent with the Velocity Tool artifact!) -->
		<sentrySkinVersion>4.0</sentrySkinVersion>

	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<!-- Matrix -->
		<dependency>
			<groupId>com.sentrysoftware</groupId>
			<artifactId>matrix-engine</artifactId>
		</dependency>
		<!-- Swagger -->
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
		</dependency>
		<!-- Jackson -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-yaml</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<!-- Prometheus -->
		<dependency>
			<groupId>io.prometheus</groupId>
			<artifactId>simpleclient</artifactId>
		</dependency>
		<dependency>
			<groupId>io.prometheus</groupId>
			<artifactId>simpleclient_common</artifactId>
		</dependency>
		<!-- Test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-inline</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<systemPropertyVariables>
						<jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>default-report</id>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>default-check</id>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<rules>
								<rule>
									<element>BUNDLE</element>
									<limits>
										<limit>
											<counter>COMPLEXITY</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.92</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<excludes>
						<!-- Exclude simple DTO, VO, POJO and Configuration -->
						<exclude>com/sentrysoftware/hardware/prometheus/configuration/**</exclude>
						<exclude>com/sentrysoftware/hardware/prometheus/dto/**</exclude>
						<exclude>com/sentrysoftware/hardware/prometheus/exception/**</exclude>
					</excludes>
					<outputDirectory>${project.build.directory}/coverage-reports/jacoco</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>keytool-maven-plugin</artifactId>
				<version>1.5</version>
				<executions>
					<execution>
						<id>create-https-certificate</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>generateKeyPair</goal>
						</goals>
						<configuration>
							<alias>https</alias>
							<dname>CN=localhost, OU=${project.name}, O=Sentry Software, C=FR</dname>
							<keyalg>RSA</keyalg>
							<keypass>Sentry</keypass>
							<keystore>${project.build.outputDirectory}/keystore/keystore.p12</keystore>
							<sigalg>SHA256withRSA</sigalg>
							<skipIfExist>true</skipIfExist>
							<storepass>Sentry</storepass>
							<storetype>PKCS12</storetype>
							<validity>3650</validity>
							<workingDirectory>${project.build.directory}</workingDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${spring-boot.version}</version>
				<configuration>
					<!-- MATSYA is already wrapped in matrix-engine -->
					<excludeGroupIds>com.sentrysoftware.patrol.matsya</excludeGroupIds>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
						<configuration>
							<mainClass>com.sentrysoftware.hardware.prometheus.HardwareSentryPrometheusApp</mainClass>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- site -->
			<!-- Configuration of the site plugin, to also generate automatic reports (Reference Guide, etc.)
				 and leverage the Sentry Maven Skin (which requires the "Velocity Tools", i.e. Java code that
				 handles most advanced parsing operations -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<configuration>
					<generateReports>true</generateReports>
					<generateProjectInfo>false</generateProjectInfo>
					<inputEncoding>UTF-8</inputEncoding>
					<outputEncoding>UTF-8</outputEncoding>
					<relativizeDecorationLinks>true</relativizeDecorationLinks>
					<skip>${skipSite}</skip>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>com.sentrysoftware.doc</groupId>
						<artifactId>sentry-skin-velocity-tools</artifactId>
						<version>${sentrySkinVersion}</version>
					</dependency>
				</dependencies>
				<executions>
					<!-- package -->
					<!-- Create the documentation at the same time we package the KM -->
					<execution>
						<phase>prepare-package</phase>
						<goals>
							<goal>site</goal>
							<goal>jar</goal>
						</goals>
						<configuration>
							<attach>true</attach>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<!-- Disable the projec-info-report plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<reportSets>
					<reportSet>
						<configuration>
							<skip>true</skip>
						</configuration>
					</reportSet>
				</reportSets>
			</plugin>
			<!-- about -->
			<!-- (to generate about.html and release-notes.html -->
			<plugin>
				<groupId>com.sentrysoftware.maven</groupId>
				<artifactId>about-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>

</project>